[tool.poetry]
name = "ledgertools"
version = "0.1.0"
description = "Ledger Tools"
authors = ["John Mee <git.commit@johnmee.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "latest"
PyYAML = "latest"
requests = "latest"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
